fixed about me text squishing photo by putting max-width

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
 
 .page1 .contentText {
     flex-direction: column;
+    max-width: 750px;
 }
 
 .page1 .contentHeader {
